@@ -32,6 +32,9 @@
 
 2002-05-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 	
+	* tests/winPipe.test: Applied patch for SF Tcl Bug #549617. Patch
+	  and bug report by Kevin Kenny <kennykb@users.sourceforge.net>.
+
 	* win/tclWinSock.c (TcpWatchProc): Fixed SF Tcl Bug #557878. We
 	  are not allowed to mess with the watch mask if the socket is a
 	  server socket. I believe that the original reporter is George
